--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "jest": "^23.6.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "regenerator-runtime": "^0.13.1"
   }
 }
