--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+sudo: required
+
 language: node_js
 node_js:
   - "stable"
+
+services:
+  - docker
+
+before_install:
+  - docker build -t rso9/auth .
+  - docker run -d -p 127.0.0.1:80:3000 rso9/auth /bin/sh -c "npm start;"
+  - docker ps -a
+  - docker run rso9/auth /bin/sh -c "npm test"
