--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ services:
   - docker
 
 before_install:
+  - docker pull node:10-alpine
   - docker build -t rso9/auth .
-  - docker run -d -p 127.0.0.1:80:3000 rso9/auth /bin/sh -c "npm start;"
+  - docker run -d -p 127.0.0.1:80:3000 rso9/auth
   - docker ps -a
-  - docker run rso9/auth /bin/sh -c "npm test"
+
+script:
+  - npm test
