--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ node_js:
 services:
   - docker
 
+env:
+  - DOCKER_IMAGE=rso9/auth:0.1
+
 before_install:
   - docker pull node:10-alpine
   - docker build -t rso9/auth .
@@ -15,3 +18,9 @@ before_install:
 
 script:
   - npm test
+
+deploy:
+  provider: script
+  script: bash .travis/docker_push.sh
+  on:
+    branch: master
