--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 before_install:
   - docker pull node:10-alpine
   - docker build -t "$DOCKER_IMAGE" .
-  - docker run -d -p 127.0.0.1:80:3000 rso9/auth
+  - docker run -d -p 127.0.0.1:80:3000 "$DOCKER_IMAGE"
   - docker ps -a
 
 script:
