--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -13,7 +13,21 @@ spec:
     spec:
       containers:
         - name: auth
-          image: gcr.io/pragmatic-zoo-222814/auth:0.1
+          image: rso9/auth:0.1
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 3000
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: auth
+spec:
+  ports:
+    - port: 80
+      targetPort: 3000
+      protocol: TCP
+  selector:
+    name: auth
+  type: LoadBalancer
