--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@kumuluz/kumuluzee-discovery": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
