added health check endpoint

--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: auth
 spec:
-  replicas: 7
+  replicas: 3
   strategy:
     type: RollingUpdate
   template:
@@ -17,6 +17,13 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 3000
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 3
+            periodSeconds: 3
+            failureThreshold: 2
 ---
 
 apiVersion: v1
