--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: rso9/auth:0.4
+          image: rso9/auth:0.5
           imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 3000
@@ -25,6 +25,10 @@ spec:
             periodSeconds: 3
             failureThreshold: 2
           env:
+          - name: KUMULUZEE_DISCOVERY_CLUSTER
+            value: rso9
+          - name: KUMULUZEE_DISCOVERY_ETCD_HOSTS
+            value: http://etcd:2379
           - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
