--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -13,8 +13,8 @@ spec:
     spec:
       containers:
         - name: auth
-          image: rso9/auth:0.6.2
-          imagePullPolicy: IfNotPresent
+          image: rso9/auth:0.7
+          imagePullPolicy: Always
           ports:
           - containerPort: 3000
           livenessProbe:
